feat: reo la conexion a la base de datos

--- a/clase_06_tienda_libros/src/main/resources/application.properties
+++ b/clase_06_tienda_libros/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# Conexion a mySQL
+spring.datasource.url=jdbc:mysql//localhost:3306/tienda_libros_db?CreateDatabaseIfNotExist=true
+spring.datasource.username=root
+soring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdb.Driver
 
+# Crear la base de dato en caso de ser necesario
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
