--- a/clase_06_tienda_libros/src/main/resources/application.properties
+++ b/clase_06_tienda_libros/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Conexion a mySQL
-spring.datasource.url=jdbc:mysql//localhost:3306/tienda_libros_db?CreateDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/tienda_libros_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 soring.datasource.password=admin
-spring.datasource.driver-class-name=com.mysql.cj.jdb.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Crear la base de dato en caso de ser necesario
 spring.jpa.hibernate.ddl-auto=update
